k8s/customer-service/service-customer.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-customer
spec:
  selector:
    app: customer-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
