k8s/customer-service/ingress-customer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /api/customer(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: service-customer
                port:
                  number: 80
